add new sections, deleted unused

--- a/src/components/sections/About.astro
+++ b/src/components/sections/About.astro
@@ -1,15 +1,14 @@
 ---
-import { Image } from "astro:assets";
-import SelfImg from "../../../public/images/self.jpg";
+
 ---
 
 <section id="about" class="pt-5 mt-[100px]">
   <div class="my-5">
     <div class="flex mr-5">
       <div id="img-wrapper" class="w-1/2 flex justify-center">
-        <Image
+        <img
           class="w-[400px] bg-onyx py-1 pl-1 pr-2 drop-shadow-md border border-black"
-          src={SelfImg}
+          src="https://images.pexels.com/photos/35572940/pexels-photo-35572940.jpeg?_gl=1*1jg1wwm*_ga*MTA5MDE3MzI2MS4xNzU4MjUwMDM4*_ga_8JE65Q40S6*czE3NzAyMzUzNTckbzI3JGcxJHQxNzcwMjM1NDAyJGoxNSRsMCRoMA.."
           alt=""
         />
       </div>
