--- a/src/components/sections/Contact.astro
+++ b/src/components/sections/Contact.astro
@@ -1,39 +1,43 @@
+---
 
-<!-- import ContactForm from "../ContactForm"; -->
+---
 
-
-
-
-    <!--//todo: SELLING CTA COMP-->   
-
-
-<section id="contact-section" class="">
-    <div class="px-5 md:px-10">
-      <div class="mx-auto w-full max-w-7xl">
-        <div class="py-16 md:py-24 lg:py-32">
-          <div class="grid items-center max-[991px]:justify-items-start grid-cols-1 lg:grid-cols-2 gap-8 sm:gap-20">
-            <div class="border-black rounded max-[991px]:max-w-[720px]">
-              <div class="p-5">
-                <h2 class="font-bold mb-2 text-3xl md:text-5xl">
-                  Contact
-                </h2>
-                <div class="ml-0 mr-0 mt-4 max-w-[528px]">
-                  <p class="max-[479px] text-lg">Lets work together!</p>
-                </div>
-
-                <div class="mb-8 max-w-[480px] text-lg">
-                  <p class="max-[479px]:text-sm">
-                    Looking forward to hearing from you!
-                  </p>
-                </div>
-              </div>
-            </div>
-            <>
-          {/* <ContactForm />*/}
-                
-            </>
-          </div>
-        </div>
+<div
+  id="contact"
+  class="text- md:mt-[120px] 2xl:mb-3 2xl:p-3 flex 2xl:justify-center"
+>
+  <div id="contact-container" class="2xl:ml-5 2xl:w-3/4">
+    <div id="contact-grid" class="rounded flex flex-col">
+      <div id="" class="bg- md:pt-5">
+        <p class="md:text-3xl text-xl pl-2">
+          You can reach me by emailing:<span class="text-munsell">
+            <a
+              class="font-semibold py-1 hover:underline"
+              href="mailto:elsahovey@gmail.com">elsahvy@gmail.com</a
+            >
+          </span>
+        </p>
+        <p class="bg- md:pl-3 pt-2 pr-5">
+          I am always looking for opportunities to further my skills... and to
+          work with other like-minded people in tech. Email is the best way to
+          get in touch, you can also find me at <span class="underline">
+            <a href="https://www.instagram.com/elsahoveydevdesign/">instagram</a
+            >
+          </span> and <span class="underline">
+            <a href="https://www.linkedin.com/in/elsa-hovey">
+              linkedIn.
+            </a></span
+          >
+        </p>
       </div>
     </div>
-  </section>
+  </div>
+</div>
+<div
+  id="back-top-top-wrapper"
+  class="bg- lg:pr-0 pr-5 flex justify-end w-3/4 lg:ml-[150px] ml-[50px] mt-[190px]"
+>
+  <p class="underline">
+    <a href="#hero"> back to top ^ </a>
+  </p>
+</div>
