--- a/src/components/sections/Packages.astro
+++ b/src/components/sections/Packages.astro
@@ -8,21 +8,24 @@ const templates = [
   {
     id: 1,
     title: "A. business card layout",
-    siteImg: temp1,
+    siteImg:
+      "https://images.pexels.com/photos/23744625/pexels-photo-23744625.jpeg?_gl=1*xgstfw*_ga*MTA5MDE3MzI2MS4xNzU4MjUwMDM4*_ga_8JE65Q40S6*czE3NzAyMzUzNTckbzI3JGcxJHQxNzcwMjM2ODk4JGoxJGwwJGgw",
     p: "Perfect starter for a business starting out. Voluptates commodi pariatur modi saepe assumenda accu sdam hic? Velit dolore ullam aliquam suscipit.",
     url: "https://template-left-nav-journal-layout-1.vercel.app/",
   },
   {
     id: 2,
     title: "B. Three page/ components",
-    siteImg: temp2,
+    siteImg:
+      "https://images.pexels.com/photos/17866368/pexels-photo-17866368.jpeg?_gl=1*xgstfw*_ga*MTA5MDE3MzI2MS4xNzU4MjUwMDM4*_ga_8JE65Q40S6*czE3NzAyMzUzNTckbzI3JGcxJHQxNzcwMjM2ODk4JGoxJGwwJGgw",
     p: "A three page template with all important things covered. Lorem iaepe assumenda accusamus cupiditate, eum doloribus atque explicabo adipisci consequatur quos quibusdam hic? Velit dolore ullam aliquam suscipit.",
     url: "https://lc-fish-expo-demo.vercel.app/",
   },
   {
     id: 3,
     title: "C. single pg journal",
-    siteImg: temp3,
+    siteImg:
+      "https://images.pexels.com/photos/158832/giraffe-reticulated-giraffe-neck-beautiful-158832.jpeg?_gl=1*dwowmo*_ga*MTA5MDE3MzI2MS4xNzU4MjUwMDM4*_ga_8JE65Q40S6*czE3NzAyMzUzNTckbzI3JGcxJHQxNzcwMjM2OTU1JGo1MyRsMCRoMA..",
     p: "A single pg portfolio which covers all three comp, perfect for online art studio, or journal. Lorem iaepe assumenda accusamus cupiditate, eum doloribus atque explicabo adipisci consequatur quos quibusdam hic? Velit dolore ullam aliquam suscipit.",
     url: "https://template-left-nav-journal-layout-1.vercel.app/",
   },
@@ -70,7 +73,7 @@ const templates = [
                   class="hover:opacity-80 hover:ease-in duration-300 text-2xl pl-1"
                   href={template.url}
                 >
-                  <Image
+                  <img
                     class="border-t border-b border-black"
                     src={template.siteImg}
                     alt=""
