--- a/src/components/sections/Works.astro
+++ b/src/components/sections/Works.astro
@@ -17,7 +17,7 @@ import Img2 from "../../../public/screenshots/designs/fish-expo-demo.png";
 <>
   <section
     id="works-wrapper"
-    class="flex justify-center items-center orange h-screen mt-[105px]"
+    class="flex justify-center items-center orange h- mt-[105px]"
   >
     <div id="container" class="">
       <!-- todo: COME BACK TO v -->
@@ -108,12 +108,20 @@ import Img2 from "../../../public/screenshots/designs/fish-expo-demo.png";
 
         <!-- *SQ-2 -->
         <div id="sq-2" class="lavender">
-          <Image src={Img1} alt="" class="h-full border border-black" />
+          <img
+            src="https://images.pexels.com/photos/20727529/pexels-photo-20727529.jpeg?_gl=1*1xnvfvb*_ga*MTA5MDE3MzI2MS4xNzU4MjUwMDM4*_ga_8JE65Q40S6*czE3NzAyMzUzNTckbzI3JGcxJHQxNzcwMjM3MDk0JGo0MCRsMCRoMA.."
+            alt=""
+            class="h-full border border-black"
+          />
         </div>
 
         <!-- *SQ-3 -->
         <div id="sq-3" class="pt-[150px]">
-          <Image src={Img2} alt="" class="h-full border border-black" />
+          <img
+            src="https://images.pexels.com/photos/20727529/pexels-photo-20727529.jpeg?_gl=1*1xnvfvb*_ga*MTA5MDE3MzI2MS4xNzU4MjUwMDM4*_ga_8JE65Q40S6*czE3NzAyMzUzNTckbzI3JGcxJHQxNzcwMjM3MDk0JGo0MCRsMCRoMA.."
+            alt=""
+            class="h-full border border-black"
+          />
         </div>
 
         <!-- *SQ-4 -->
