--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,7 +14,7 @@ const links = [
   <nav class="pl-5 pr-5 pt-1 h-[100%] grid grid-cols-2 pb-3">
     <div class="flex justify-start items-end py-3 pl-1">
       <div id="logo" class="text-4xl font-bold">
-        <a href="/">Laughing Coyote Dev</a>
+        <a href="/">SANDBOX-astro </a>
       </div>
     </div>
     <ul class="flex justify-end items-end text-3xl py-3">
